--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@ body {
   background: #dfe9f5;
 }
 
+/** Navigation **/
+
 nav {
   position: absolute;
   top: 0;
@@ -56,18 +58,16 @@ a {
   justify-content: center;
 }
 
-a:hover {
+.active {
   position: relative;
   border-left: solid;
   border-color: #6666CC;
   border-width: 4px;
-}
-
-.nav-item:hover {
   color: #000;
 }
 
+/** Homepage **/
 
-.mt30 {
-  margin-top: 30px;
+.ml50 {
+  margin-left: 850px;
 }
