--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --text-color: #CECECE;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +14,8 @@
 }
 
 body {
-  background: #dfe9f5;
+  background: #1D2532;
+  color: var(--text-color);
 }
 
 /** Navigation **/
@@ -20,7 +26,6 @@ nav {
   bottom: 0;
   height: 100%;
   left: 0;
-  background: #fff;
   overflow: hidden;
   transition: width 0.2s linear;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
@@ -30,11 +35,13 @@ nav {
   text-align: center;
   display: flex;
   transition: all 0.5s ease;
+  padding-bottom: 26px;
+  margin-left: 25px;
 }
 
 a {
   position: relative;
-  color: rgb(85, 83, 83);
+  color: var(--text-color);
   font-size: 14px;
   display: table;
   width: 300px;
@@ -53,7 +60,7 @@ a {
 .nav-item {
   position: relative;
   margin-left: 10px;
-  color: #7D7D7D;
+  color: var(--text-color);
   align-items: center;
   justify-content: center;
 }
